# Server4Poker

./: .gitignore  AsyncUvw.cpp  AsyncUvw.hpp  BaseMsg.proto  CMakeLists.txt  Client.proto  CommonDef.cpp  CommonDef.h  IModule.hpp  IThdSetter.hpp  ITimerListener.hpp  MessageBuff.h  MessagePool.cpp  MessagePool.h  Msg.def.cpp  Msg.def.h  README.md  ServerBase.cpp  ServerBase.h  ServerBase.h.autosave.XbddJX  TODO  Thread.cpp  Thread.hpp  TimerListener.cpp  TimerListener.hpp  TomlHelper.h  WrappedMessage.cpp  WrappedMessage.hpp  WrappedMessageBuilder.hpp  build_3rd.cmd  build_3rd.sh  build_3rd_debug.cmd  build_protobuf.sh  demo.toml  gen_proto.cmd  gen_proto.sh  note.md  snowflake.hpp
.cache/clangd/index/: AsyncUvw.cpp.9FF06BBAF142638A.idx  AsyncUvw.hpp.A006312DA730DFBD.idx  BaseMsg.pb.cc.D499D6DB6D013C5B.idx  BaseMsg.pb.h.86FEB76237B55664.idx  IdMaker.cpp.A95F766003713888.idx  IdMaker.h.450B0AB106AC7DBC.idx  MessagePool.cpp.A9488C13C57D54BA.idx  MessagePool.h.E95FFD60196BEEDE.idx  Msg.def.cpp.EEB8B3A4A6360015.idx  Msg.def.h.C4F8A018D007B457.idx  OptionParser.cpp.92577619B5364FEE.idx  OptionParser.h.C2FE6F3DF38C73DC.idx  ServerBase.cpp.A288BFB5B868A1D7.idx  ServerBase.h.E855B63C39A3B4F8.idx  Session.cpp.835A313E2F368EDC.idx  Session.hpp.35E9C5EA336F408A.idx  SessionDef.h.270C177E360C8633.idx  SessionImpl.cpp.114FDEDE4AFF5123.idx  SessionImpl.hpp.13968E79D1279A8D.idx  Thread.cpp.37C174EA34925693.idx  Thread.hpp.F5659E75823ED1F6.idx  TimerListener.cpp.C42F04B578B03221.idx  TimerListener.hpp.85D8E8B7A535B1E1.idx  TomlHelper.h.47A8E19399C1D520.idx  WrappedMessage.hpp.88053C0AC1E552CE.idx  absl_check.h.641B7567227F30E6.idx  absl_log.h.A1833A35B5DC9172.idx  absl_vlog_is_on.h.168C41BA2C95BA02.idx  algorithm.h.84A4EC07155CB80F.idx  any.h.6574D9CB360593BF.idx  any_invocable.h.42092354A682EB7F.idx  any_invocable.h.C1FE21E7E910F84D.idx  arena.h.DBE6B11BA1CB7B3B.idx  arena_align.h.F763EC09A6AC1D36.idx  arena_allocation_policy.h.76258A867EAE1181.idx  arena_cleanup.h.903F39A17ABFCB07.idx  arenastring.h.D469C3C14E01AC41.idx  arenaz_sampler.h.6E2EFF26728A2925.idx  arg.h.AECD0CE72B7AD3C3.idx  async.cpp.4CF76257182172FB.idx  (+228 more)
3rd/protobuf3/lib/cmake/absl/: abslTargets-release.cmake  abslTargets.cmake
3rd/protobuf3/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets-release.cmake  protobuf-targets.cmake
3rd/protobuf3/lib/cmake/utf8_range/: utf8_range-targets.cmake
3rd/protobuf3/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cord_test_helpers.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  (+153 more)
3rd/protobuf3/linux/lib/cmake/absl/: abslConfigVersion.cmake  abslTargets-release.cmake  abslTargets.cmake
3rd/protobuf3/linux/lib/cmake/protobuf/: protobuf-targets-release.cmake  protobuf-targets.cmake
3rd/protobuf3/linux/lib/pkgconfig/: absl_absl_check.pc  absl_absl_log.pc  absl_absl_vlog_is_on.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cord_test_helpers.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  (+153 more)
Session/: IdMaker.cpp  IdMaker.h  Session.cpp  Session.hpp  SessionDef.h  SessionImpl.cpp  SessionImpl.hpp
dbpool/: BinSemaphore.hpp  MySqlConnectPool.hpp  MysqlConnect.hpp
demos/: CMakeLists.txt  gateserver.h
demos/central/: CMakeLists.txt  central.toml  centralserver.cpp  centralserver.h
demos/clientdemo/: CMakeLists.txt  main.cpp
demos/dbpool_test/: CMakeLists.txt  main.cpp
demos/gate/: CMakeLists.txt  gate.toml  gateserver.cpp  gateserver.h
demos/login/: CMakeLists.txt  login.cpp  login.h  login.toml
demos/user/: CMakeLists.txt  user.cpp  user.h  user.toml
gen_proto/: Base.pb.cc  Base.pb.h  BaseMsg.pb.cc  BaseMsg.pb.h  Central.pb.cc  Central.pb.h  Client.pb.cc  Client.pb.h  Core.pb.cc  Core.pb.h
nats_client/: natsclient.cpp  natsclient.hpp
protos/: Base.proto  Central.proto  Client.proto  Core.proto  MessageCore.proto  gen_proto.sh
sql/: user.sql  usr_goods.sql
sql/scheme/: uid_map.sql  user.sql
tests/: CMakeLists.txt  classfn_test.cpp  tomlhelper.cpp
toml/: TomlHelper.h
